# EverCrypt-Bootkit

./: .gitignore  build_all.sh  commit_log.txt  setup.sh  updates.md
final_deliverables/: README.txt
me_payload/: README.md
me_payload/linker/: me_8051.ld
me_payload/src/: evercrypt_me.lst  evercrypt_me.s  evercrypt_me.sym  me_crypto.lst  me_crypto.s  me_crypto.sym  me_hooks.asm  me_hooks.lst  me_hooks.s  me_hooks.sym
secrets/: .gitignore
src/: evercrypt_me.lst  evercrypt_me.s  evercrypt_me.sym  me_crypto.lst  me_crypto.s  me_crypto.sym  me_hooks.lst  me_hooks.s  me_hooks.sym
tests/fuzzing/: build_fuzz.sh  fuzz_smm_comm.c  fuzz_standalone
tests/hardware/: test_edr_bypass.sh  test_encryption.sh  test_persistence.sh
tests/qemu_ovmf/: ovmf_vars.fd  run_qemu.sh
tests/qemu_ovmf/esp/: startup.nsh
tests/test_results/: qemu_output.txt
tools/builder/: build_firmware.sh
tools/flasher/: Cargo.toml
tools/flasher/src/: main.rs  spi_controller.rs
tools/me_analyzer/: extract_me.py  inject_payload.py  verify_integrity.py
tools/recovery/: kill_switch.py  unbrick_spi.py
uefi_bootkit/CryptoEngine/: chacha20.c  chacha20.h
uefi_bootkit/DxeDriver/: EverCryptDxe.c  EverCryptDxe.inf
uefi_bootkit/Include/: EverCryptProto.h
uefi_bootkit/SmmHandler/: EverCryptSmm.c  EverCryptSmm.inf  smm_crypto.nasm
